Fixes CSS: Firefox  is not happy about whitespace: nowrap on the menu li elements

--- a/style.css
+++ b/style.css
@@ -1281,7 +1281,6 @@ ul.menu li {
   margin: 0;
   padding: 0;
   list-style: none;
-  white-space: nowrap;
 }
 
 ul.inline {
